UI link visibility fix in sidebar, various style updates

--- a/plantit/front_end/src/scss/main.sass
+++ b/plantit/front_end/src/scss/main.sass
@@ -315,8 +315,8 @@ h5
   font-family: "Roboto", "Lucida Grande", "DejaVu Sans", "Bitstream Vera Sans", Verdana, Arial, sans-serif
   color: $dark !important
 
-a
-  color: $dark
+// a
+//   color: $dark
 
 a:link
   font-weight: 300
